# matasano

./: Cargo.toml
data/: 20.out.txt
src/: aes.rs  base64.rs  crack.rs  data.rs  dh.rs  http.rs  lib.rs  md4.rs  primitives.rs  random.rs  sha1.rs  xor.rs
tests/: lib.rs  set1.rs  set2.rs  set3.rs  set4.rs  set5.rs  util.rs
