[package]
name = "matasano"
version = "0.0.1"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
autotests = false

[[test]]
name = "set1"
path = "tests/set1.rs"

[[test]]
name = "set2"
path = "tests/set2.rs"

[[test]]
name = "set3"
path = "tests/set3.rs"

[[test]]
name = "set4"
path = "tests/set4.rs"

[dependencies]
rustc-serialize = "0.3"
openssl = "0.10"
rand = "0.6"
rand_core = "0.4"
time = "0.1"
