[package]
name = "matasano"
version = "0.0.1"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
autotests = false

[[test]]
name = "set1"
path = "tests/set1.rs"

[[test]]
name = "set2"
path = "tests/set2.rs"

[[test]]
name = "set3"
path = "tests/set3.rs"

[[test]]
name = "set4"
path = "tests/set4.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
base64 = "0.10"
hex = "0.3"
openssl = "0.10"
rand = "0.6"
rand_core = "0.4"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
