[package]
name = "matasano"
version = "0.0.1"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
autotests = false

[[test]]
name = "set1"
path = "tests/set1.rs"

[[test]]
name = "set2"
path = "tests/set2.rs"

[[test]]
name = "set3"
path = "tests/set3.rs"

[[test]]
name = "set4"
path = "tests/set4.rs"

[[test]]
name = "set5"
path = "tests/set5.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
base64 = "0.10"
crossbeam = "0.7"
hex = "0.3"
num-bigint = { version = "0.2", features = ["rand", "serde"] }
openssl = "0.10"
rand = "0.6"
rand_core = "0.4"
rayon = "1.0"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
